version/0.21/_sources/api/solver/_autosummary/settings/turbulent_viscosity_ratio.rst.txt
:orphan:

.. _turbulent_viscosity_ratio:

turbulent_viscosity_ratio
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.turbulent_viscosity_ratio.turbulent_viscosity_ratio
    :show-inheritance:

.. rubric:: Included in:

================================================   =======================

Parent                                                             Summary

================================================   =======================
:ref:`turbulence <turbulence_1>`                       Help not available.

:ref:`turbulence <turbulence_2>`                       Help not available.

:ref:`recirculation_inlet <recirculation_inlet>`       Help not available.

:ref:`turbulence <turbulence_5>`                       Help not available.

================================================   =======================

