version/0.28/_sources/api/solver/_autosummary/settings/turbulent_viscosity_ratio.rst.txt
:orphan:

.. _turbulent_viscosity_ratio:

turbulent_viscosity_ratio
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.turbulent_viscosity_ratio
    :show-inheritance:

.. rubric:: Included in:

====================================================   =====================================================================

Parent                                                                                                               Summary

====================================================   =====================================================================
:ref:`turbulence_1 <turbulence_1>`                                  Allows to change turbulence model variables or settings.

:ref:`turbulence_2 <turbulence_2>`                                  Allows to change turbulence model variables or settings.

:ref:`recirculation_inlet_1 <recirculation_inlet_1>`       Allows to change recirculation-inlet model variables or settings.

:ref:`turbulence_5 <turbulence_5>`                                  Allows to change turbulence model variables or settings.

====================================================   =====================================================================

